@@ -98,7 +98,7 @@ Ctrl\-w		Backward kill word
 
 Ctrl\-t		Transpose chars
 
-Ctrl\-q		Jump to the next unread message (Not yet implemented)
+Ctrl\-q		Jump to the next unread message
 
 
 .SH "COMMANDS"
@@ -155,6 +155,8 @@ The roster command manipulates the roster/buddylist\&.
  \fBshow_offline\fR show offline buddies
  \fBtop\fR jump to the top of the roster
  \fBbottom\fR jump to the bottom of the roster
+ \fIunread_first\fR jump to the first unread message
+ \fIunread_next\fR jump to the next unread message
 
 .TP
 \fB/say\fR text
