@@ -220,7 +220,7 @@ Ctrl-q
 </td>
 <td>
 
-Jump to the next unread message (Not yet implemented)
+Jump to the next unread message
 
 </td>
 </tr>
@@ -418,6 +418,26 @@ jump to the bottom of the roster
 
 </td>
 </tr>
+<tr valign="top">
+<td>
+<b>unread_first</b>
+</td>
+<td>
+
+jump to the first unread message
+
+</td>
+</tr>
+<tr valign="top">
+<td>
+<b>unread_next</b>
+</td>
+<td>
+
+jump to the next unread message
+
+</td>
+</tr>
 </table>
 </dd>
 <dt><b>
@@ -477,8 +497,8 @@ License (GPL).
 </p>
 <div id="footer">
 <p>
-Version 0.6.0<br />
-Last updated 07-Jun-2005 22:11:00 CEST
+Version 0.6.1<br />
+Last updated 10-Jun-2005 22:47:25 CEST
 </p>
 </div>
 </div>
